--- a/index.html
+++ b/index.html
@@ -1,54 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | Smart Burme</title>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Smart Burme</title>
+
+  <!-- Gradient Text Style -->
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-color: #0f0f1a;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    .gradient-text {
+      font-size: 2.5rem;
+      font-weight: bold;
+      background: linear-gradient(to right, #888888, #e0e0e0);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      animation: flicker 1.5s infinite alternate;
+    }
+
+    @keyframes flicker {
+      0% { opacity: 0.8; }
+      100% { opacity: 1; }
+    }
+  </style>
 </head>
 <body>
-    <h2>Login</h2>
-    <form id="loginForm">
-        <input type="email" id="email" placeholder="Enter Email" required><br><br>
-        <input type="password" id="password" placeholder="Enter Password" required><br><br>
-        <button type="submit">Login</button>
-    </form>
+  <div class="gradient-text">Smart Burme</div>
 
-    <script>
-        // Your Firebase config
-        const firebaseConfig = {
-            apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-            authDomain: "smart-burme-app.firebaseapp.com",
-            projectId: "smart-burme-app",
-            storageBucket: "smart-burme-app.appspot.com",
-            messagingSenderId: "851502425686",
-            appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7",
-            measurementId: "G-EB564CY4KT"
-        };
+  <!-- Firebase Scripts -->
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-app.js";
+    import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.6.11/firebase-analytics.js";
 
-        // Initialize Firebase
-        const app = firebase.initializeApp(firebaseConfig);
-        const auth = firebase.auth();
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7",
+      measurementId: "G-EB564CY4KT"
+    };
 
-        const loginForm = document.getElementById('loginForm');
+    const app = initializeApp(firebaseConfig);
+    const analytics = getAnalytics(app);
+  </script>
 
-        loginForm.addEventListener('submit', function(event) {
-            event.preventDefault();
-
-            const email = document.getElementById('email').value;
-            const password = document.getElementById('password').value;
-
-            // Sign in with Firebase
-            auth.signInWithEmailAndPassword(email, password)
-                .then(() => {
-                    window.location.href = 'main.html'; // Redirect to main.html after login
-                })
-                .catch((error) => {
-                    alert(error.message); // Show error message if any
-                });
-        });
-    </script>
+  <!-- Redirect After 3s -->
+  <script>
+    setTimeout(() => {
+      window.location.href = "registrations.html";
+    }, 3000);
+  </script>
 </body>
 </html>
