--- a/registration.html
+++ b/registration.html
@@ -1,150 +1,179 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registration - SMART BURME</title>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap">
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: 'Poppins', sans-serif;
-        }
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            background: #1f293a;
-        }
-        .container {
-            position: relative;
-            width: 90%;
-            max-width: 400px;
-            background: rgba(31, 41, 58, 0.8);
-            border-radius: 20px;
-            padding: 40px;
-            box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
-            z-index: 10;
-            backdrop-filter: blur(5px);
-        }
-        .container h2 {
-            font-size: 2em;
-            color: #0ef;
-            text-align: center;
-            margin-bottom: 30px;
-        }
-        .input-box {
-            position: relative;
-            margin: 25px 0;
-        }
-        .input-box input {
-            width: 100%;
-            height: 50px;
-            background: transparent;
-            border: 2px solid #2c4766;
-            outline: none;
-            border-radius: 40px;
-            font-size: 1em;
-            color: #fff;
-            padding: 0 20px;
-            transition: all 0.5s ease;
-        }
-        .input-box input:focus,
-        .input-box input:valid {
-            border-color: #0ef;
-            box-shadow: 0 0 10px #0ef;
-        }
-        .input-box label {
-            position: absolute;
-            top: 50%;
-            left: 20px;
-            transform: translateY(-50%);
-            font-size: 1em;
-            color: #fff;
-            pointer-events: none;
-            transition: all 0.5s ease;
-        }
-        .input-box input:focus~label,
-        .input-box input:valid~label {
-            top: 1px;
-            font-size: .8em;
-            background: #1f293a;
-            padding: 0 6px;
-            color: #0ef;
-        }
-        .btn {
-            width: 100%;
-            height: 45px;
-            background: #0ef;
-            border: none;
-            outline: none;
-            border-radius: 40px;
-            cursor: pointer;
-            font-size: 1em;
-            color: #1f293a;
-            font-weight: 600;
-            transition: all 0.3s;
-        }
-        .btn:hover {
-            background: #09c;
-            box-shadow: 0 0 15px #0ef;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration - SMART BURME</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      background: #1f293a; /* Nero background */
+    }
+
+    .container {
+      width: 90%;
+      max-width: 400px;
+      background: rgba(31, 41, 58, 0.85);
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(8px);
+    }
+
+    .container h2 {
+      font-size: 2em;
+      background: linear-gradient(to right, #ccc, #fff);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .input-box {
+      position: relative;
+      margin: 25px 0;
+    }
+
+    .input-box input {
+      width: 100%;
+      height: 50px;
+      background: transparent;
+      border: 2px solid #2c4766;
+      outline: none;
+      border-radius: 40px;
+      font-size: 1em;
+      color: #fff;
+      padding: 0 20px;
+      transition: all 0.5s ease;
+    }
+
+    .input-box input:focus,
+    .input-box input:valid {
+      border-color: #0ef;
+      box-shadow: 0 0 10px #0ef;
+    }
+
+    .input-box label {
+      position: absolute;
+      top: 50%;
+      left: 20px;
+      transform: translateY(-50%);
+      font-size: 1em;
+      color: #fff;
+      pointer-events: none;
+      transition: all 0.5s ease;
+    }
+
+    .input-box input:focus~label,
+    .input-box input:valid~label {
+      top: 1px;
+      font-size: .8em;
+      background: #1f293a;
+      padding: 0 6px;
+      color: #0ef;
+    }
+
+    .btn {
+      width: 100%;
+      height: 45px;
+      background: #0ef;
+      border: none;
+      outline: none;
+      border-radius: 40px;
+      cursor: pointer;
+      font-size: 1em;
+      color: #1f293a;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn:hover {
+      background: #09c;
+      box-shadow: 0 0 15px #0ef;
+    }
+  </style>
 </head>
 <body>
 
-    <div class="container">
-        <h2>Registration</h2>
-        <form id="registrationForm">
-            <div class="input-box">
-                <input type="text" id="username" required>
-                <label for="username">Username</label>
-            </div>
-            <div class="input-box">
-                <input type="email" id="email" required>
-                <label for="email">Gmail</label>
-            </div>
-            <div class="input-box">
-                <input type="password" id="password" required>
-                <label for="password">Password</label>
-            </div>
-            <button type="submit" class="btn">Register</button>
-        </form>
-    </div>
+  <div class="container">
+    <h2>SMART BURME</h2>
+    <form id="registrationForm">
+      <div class="input-box">
+        <input type="text" id="username" required>
+        <label for="username">Username</label>
+      </div>
+      <div class="input-box">
+        <input type="email" id="email" required>
+        <label for="email">Gmail</label>
+      </div>
+      <div class="input-box">
+        <input type="password" id="password" required>
+        <label for="password">Password</label>
+      </div>
+      <button type="submit" class="btn">Register</button>
+    </form>
+  </div>
 
-    <script>
-        document.getElementById("registrationForm").addEventListener("submit", function(e) {
-            e.preventDefault();
+  <!-- Firebase SDK -->
+  <script type="module">
+    // Firebase SDKs
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
+    import { getAuth, createUserWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-auth.js";
 
-            // Get the input values
-            const username = document.getElementById("username").value;
-            const email = document.getElementById("email").value;
-            const password = document.getElementById("password").value;
+    const firebaseConfig = {
+      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
+      authDomain: "smart-burme-app.firebaseapp.com",
+      projectId: "smart-burme-app",
+      storageBucket: "smart-burme-app.appspot.com",
+      messagingSenderId: "851502425686",
+      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7",
+      measurementId: "G-EB564CY4KT"
+    };
 
-            // Validate email format (simple regex for Gmail)
-            const emailPattern = /^[a-zA-Z0-9._%+-]+@gmail\.com$/;
-            if (!emailPattern.test(email)) {
-                alert("Please enter a valid Gmail address.");
-                return;
-            }
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
 
-            // Validate password length
-            if (password.length < 6) {
-                alert("Password must be at least 6 characters long.");
-                return;
-            }
+    document.getElementById("registrationForm").addEventListener("submit", function(e) {
+      e.preventDefault();
 
-            // Registration successful, proceed to Login page after 7 seconds
-            setTimeout(function() {
-                alert("Registration successful! Redirecting to Login page.");
-                window.location.href = "login.html"; // Redirect to the login page after 7 seconds
-            }, 7000);
+      const username = document.getElementById("username").value;
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      const emailPattern = /^[a-zA-Z0-9._%+-]+@gmail\.com$/;
+      if (!emailPattern.test(email)) {
+        alert("Gmail လိပ်စာမှန်မှန် ရိုက်ထည့်ပါ");
+        return;
+      }
+
+      if (password.length < 6) {
+        alert("Password သည် အနည်းဆုံး ၆ လုံးရှိရမည်");
+        return;
+      }
+
+      createUserWithEmailAndPassword(auth, email, password)
+        .then((userCredential) => {
+          alert("မှတ်ပုံတင်ပြီးပါပြီ။ Login များသို့ ဦးတည်နေပါပြီ...");
+          setTimeout(() => {
+            window.location.href = "login.html";
+          }, 3000);
+        })
+        .catch((error) => {
+          alert("Error: " + error.message);
         });
-    </script>
-
+    });
+  </script>
 </body>
 </html>
