--- a/main.html
+++ b/main.html
@@ -2,10 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Login - SMART BURME</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet"/>
+  <title>Smart Burme - Main</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
   <style>
     * {
       margin: 0;
@@ -13,125 +12,96 @@
       box-sizing: border-box;
       font-family: 'Poppins', sans-serif;
     }
+
     body {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      background: #1f293a;
-    }
-    .login-container {
-      background: rgba(31, 41, 58, 0.85);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-      width: 90%;
-      max-width: 400px;
-    }
-    .login-container h2 {
-      text-align: center;
-      color: #0ef;
-      margin-bottom: 30px;
-    }
-    .input-box {
+      background-color: #0f0f0f;
+      overflow: hidden;
       position: relative;
-      margin-bottom: 25px;
     }
-    .input-box input {
+
+    .video-container {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      overflow: hidden;
+      z-index: 1;
+    }
+
+    .video-container video {
       width: 100%;
-      height: 50px;
-      background: transparent;
-      border: 2px solid #2c4766;
-      border-radius: 40px;
-      padding: 0 20px;
-      font-size: 1em;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .menu {
+      position: fixed;
+      bottom: 30px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(8px);
+      border-radius: 30px;
+      padding: 12px 30px;
+      display: flex;
+      justify-content: space-between;
+      gap: 30px;
+      z-index: 2;
+      animation: floatUp 1s ease-out;
+    }
+
+    .menu i {
       color: #fff;
-      outline: none;
-    }
-    .input-box label {
-      position: absolute;
-      top: 50%;
-      left: 20px;
-      transform: translateY(-50%);
-      color: #ccc;
-      pointer-events: none;
-      transition: 0.5s;
-    }
-    .input-box input:focus ~ label,
-    .input-box input:valid ~ label {
-      top: 5px;
-      font-size: 0.8em;
-      background: #1f293a;
-      padding: 0 6px;
-      color: #0ef;
-    }
-    .btn {
-      width: 100%;
-      height: 45px;
-      background: #0ef;
-      border: none;
-      border-radius: 40px;
-      font-size: 1em;
-      color: #1f293a;
-      font-weight: bold;
+      font-size: 24px;
       cursor: pointer;
-      transition: all 0.3s;
+      transition: 0.3s;
     }
-    .btn:hover {
-      background: #09c;
-      box-shadow: 0 0 15px #0ef;
+
+    .menu i:hover {
+      color: #0ef;
+      transform: scale(1.2);
     }
+
+    @keyframes floatUp {
+      from {
+        transform: translateX(-50%) translateY(100px);
+        opacity: 0;
+      }
+      to {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
+      }
+    }
+
+    .logo {
+      position: fixed;
+      top: 20px;
+      left: 20px;
+      font-size: 20px;
+      font-weight: 600;
+      color: #ccc;
+      z-index: 2;
+    }
+
   </style>
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
 
-  <div class="login-container">
-    <h2>Login</h2>
-    <form id="loginForm">
-      <div class="input-box">
-        <input type="email" id="email" required />
-        <label for="email">Gmail</label>
-      </div>
-      <div class="input-box">
-        <input type="password" id="password" required />
-        <label for="password">Password</label>
-      </div>
-      <button type="submit" class="btn">Login</button>
-    </form>
+  <div class="video-container">
+    <video src="assets/sample.mp4" autoplay muted loop></video>
   </div>
 
-  <script type="module">
-    // Firebase SDK ထည့်ပါ
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } from "https://www.gstatic.com/firebasejs/9.22.2/firebase-auth.js";
+  <div class="logo">Smart Burme</div>
 
-    const firebaseConfig = {
-      apiKey: "AIzaSyAr7Hv2ApKtNTxF11MhT5cuWeg_Dgsh0TY",
-      authDomain: "smart-burme-app.firebaseapp.com",
-      projectId: "smart-burme-app",
-      storageBucket: "smart-burme-app.appspot.com",
-      messagingSenderId: "851502425686",
-      appId: "1:851502425686:web:f29e0e1dfa84794b4abdf7"
-    };
+  <div class="menu">
+    <i class="fas fa-home"></i>
+    <i class="fas fa-search"></i>
+    <i class="fas fa-plus-circle"></i>
+    <i class="fas fa-comments"></i>
+    <i class="fas fa-user"></i>
+  </div>
 
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    document.getElementById("loginForm").addEventListener("submit", function(e) {
-      e.preventDefault();
-
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      signInWithEmailAndPassword(auth, email, password)
-        .then((userCredential) => {
-          alert("Login successful!");
-          window.location.href = "main.html";
-        })
-        .catch((error) => {
-          alert("Login failed: " + error.message);
-        });
-    });
-  </script>
 </body>
 </html>
