--- a/login.html
+++ b/login.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme | Login</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Login - SMART BURME</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -14,50 +14,48 @@
     }
 
     body {
-      background: #0a0a0a;
-      overflow: hidden;
-      min-height: 100vh;
+      background-color: #0f0f0f;
       display: flex;
       justify-content: center;
       align-items: center;
-      position: relative;
+      height: 100vh;
+      overflow: hidden;
     }
 
     .container {
       position: relative;
-      width: 100%;
+      width: 90%;
       max-width: 400px;
-      padding: 40px;
-      background: rgba(31, 41, 58, 0.85);
+      background: rgba(31, 41, 58, 0.8);
       border-radius: 20px;
-      box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+      padding: 40px;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
       backdrop-filter: blur(5px);
-      z-index: 10;
     }
 
     .container h2 {
+      font-size: 2em;
       color: #0ef;
-      font-size: 1.8em;
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 30px;
     }
 
     .input-box {
       position: relative;
-      margin: 20px 0;
+      margin: 25px 0;
     }
 
     .input-box input {
       width: 100%;
-      height: 45px;
+      height: 50px;
       background: transparent;
       border: 2px solid #2c4766;
-      border-radius: 40px;
-      padding: 0 20px;
-      color: #fff;
-      font-size: 1em;
       outline: none;
-      transition: 0.4s;
+      border-radius: 40px;
+      font-size: 1em;
+      color: #fff;
+      padding: 0 20px;
+      transition: all 0.5s ease;
     }
 
     .input-box input:focus,
@@ -71,17 +69,17 @@
       top: 50%;
       left: 20px;
       transform: translateY(-50%);
-      color: #ccc;
-      font-size: 0.9em;
+      font-size: 1em;
+      color: #fff;
       pointer-events: none;
-      transition: 0.4s;
+      transition: all 0.5s ease;
     }
 
-    .input-box input:focus ~ label,
-    .input-box input:valid ~ label {
-      top: 5px;
-      font-size: 0.75em;
-      background: #0a0a0a;
+    .input-box input:focus~label,
+    .input-box input:valid~label {
+      top: 1px;
+      font-size: .8em;
+      background: #1f293a;
       padding: 0 6px;
       color: #0ef;
     }
@@ -91,11 +89,13 @@
       height: 45px;
       background: #0ef;
       border: none;
+      outline: none;
       border-radius: 40px;
-      font-weight: bold;
-      color: #0a0a0a;
       cursor: pointer;
-      transition: 0.3s;
+      font-size: 1em;
+      color: #1f293a;
+      font-weight: 600;
+      transition: all 0.3s;
     }
 
     .btn:hover {
@@ -103,76 +103,84 @@
       box-shadow: 0 0 15px #0ef;
     }
 
-    .signup {
-      text-align: center;
-      margin-top: 15px;
-      color: #fff;
-      font-size: 0.9em;
-    }
-
-    .signup a {
-      color: #0ef;
-      text-decoration: none;
-      font-weight: 600;
-    }
-
-    .signup a:hover {
-      text-decoration: underline;
-    }
-
-    .bg-animation span {
-      position: absolute;
+    .menu {
+      position: fixed;
+      bottom: 30px;
       left: 50%;
-      top: 50%;
-      width: 32px;
-      height: 6px;
-      background: #2c4766;
-      border-radius: 8px;
-      transform-origin: left center;
-      transform: translate(-50%, -50%) rotate(calc(var(--i) * 7.2deg)) translateX(128px);
-      animation: animateBlink 3s linear infinite;
-      animation-delay: calc(var(--i) * 0.06s);
+      transform: translateX(-50%);
+      background: rgba(255, 255, 255, 0.1);
+      backdrop-filter: blur(8px);
+      border-radius: 30px;
+      padding: 12px 30px;
+      display: flex;
+      justify-content: space-between;
+      gap: 30px;
+      z-index: 2;
+      animation: floatUp 1s ease-out;
     }
 
-    @keyframes animateBlink {
-      0%, 100% {
-        background: #0ef;
-        box-shadow: 0 0 10px #0ef, 0 0 20px #0ef;
+    .menu i {
+      color: #fff;
+      font-size: 24px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    .menu i:hover {
+      color: #0ef;
+      transform: scale(1.2);
+    }
+
+    @keyframes floatUp {
+      from {
+        transform: translateX(-50%) translateY(100px);
+        opacity: 0;
       }
-      25% {
-        background: #2c4766;
-        box-shadow: none;
+      to {
+        transform: translateX(-50%) translateY(0);
+        opacity: 1;
       }
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h2>Login to Smart Burme</h2>
-    <form action="#">
+    <h2>Login</h2>
+    <form id="loginForm">
       <div class="input-box">
-        <input type="email" required />
-        <label>Email</label>
+        <input type="email" id="email" required>
+        <label for="email">Gmail</label>
       </div>
       <div class="input-box">
-        <input type="password" required />
-        <label>Password</label>
+        <input type="password" id="password" required>
+        <label for="password">Password</label>
       </div>
       <button type="submit" class="btn">Login</button>
     </form>
-    <div class="signup">
-      Don't have an account? <a href="registration.html">Sign up</a>
-    </div>
   </div>
 
-  <div class="bg-animation"></div>
+  <div class="menu">
+    <i class="fas fa-home"></i>
+    <i class="fas fa-search"></i>
+    <i class="fas fa-plus-circle"></i>
+    <i class="fas fa-comments"></i>
+    <i class="fas fa-user"></i>
+  </div>
 
   <script>
-    for (let i = 0; i < 50; i++) {
-      const span = document.createElement('span');
-      span.style.setProperty('--i', i);
-      document.querySelector('.bg-animation').appendChild(span);
-    }
+    document.getElementById("loginForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      // Simple Firebase Authentication Check
+      if (email && password) {
+        alert("Login successful!");
+        window.location.href = "main.html"; // Redirect to main page after successful login
+      } else {
+        alert("Please fill all fields!");
+      }
+    });
   </script>
 </body>
 </html>
