--- a/main.html
+++ b/main.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Smart Burme - Main</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Registration - SMART BURME</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <style>
     * {
       margin: 0;
@@ -15,24 +15,92 @@
 
     body {
       background-color: #0f0f0f;
-      overflow: hidden;
-      position: relative;
-    }
-
-    .video-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       height: 100vh;
       overflow: hidden;
-      z-index: 1;
     }
 
-    .video-container video {
+    .container {
+      position: relative;
+      width: 90%;
+      max-width: 400px;
+      background: rgba(31, 41, 58, 0.8);
+      border-radius: 20px;
+      padding: 40px;
+      box-shadow: 0 15px 25px rgba(0, 0, 0, 0.5);
+      backdrop-filter: blur(5px);
+    }
+
+    .container h2 {
+      font-size: 2em;
+      color: #0ef;
+      text-align: center;
+      margin-bottom: 30px;
+    }
+
+    .input-box {
+      position: relative;
+      margin: 25px 0;
+    }
+
+    .input-box input {
       width: 100%;
-      height: 100%;
-      object-fit: cover;
+      height: 50px;
+      background: transparent;
+      border: 2px solid #2c4766;
+      outline: none;
+      border-radius: 40px;
+      font-size: 1em;
+      color: #fff;
+      padding: 0 20px;
+      transition: all 0.5s ease;
+    }
+
+    .input-box input:focus,
+    .input-box input:valid {
+      border-color: #0ef;
+      box-shadow: 0 0 10px #0ef;
+    }
+
+    .input-box label {
+      position: absolute;
+      top: 50%;
+      left: 20px;
+      transform: translateY(-50%);
+      font-size: 1em;
+      color: #fff;
+      pointer-events: none;
+      transition: all 0.5s ease;
+    }
+
+    .input-box input:focus~label,
+    .input-box input:valid~label {
+      top: 1px;
+      font-size: .8em;
+      background: #1f293a;
+      padding: 0 6px;
+      color: #0ef;
+    }
+
+    .btn {
+      width: 100%;
+      height: 45px;
+      background: #0ef;
+      border: none;
+      outline: none;
+      border-radius: 40px;
+      cursor: pointer;
+      font-size: 1em;
+      color: #1f293a;
+      font-weight: 600;
+      transition: all 0.3s;
+    }
+
+    .btn:hover {
+      background: #09c;
+      box-shadow: 0 0 15px #0ef;
     }
 
     .menu {
@@ -73,27 +141,27 @@
         opacity: 1;
       }
     }
-
-    .logo {
-      position: fixed;
-      top: 20px;
-      left: 20px;
-      font-size: 20px;
-      font-weight: 600;
-      color: #ccc;
-      z-index: 2;
-    }
-
   </style>
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </head>
 <body>
-
-  <div class="video-container">
-    <video src="assets/sample.mp4" autoplay muted loop></video>
+  <div class="container">
+    <h2>Registration</h2>
+    <form id="registrationForm">
+      <div class="input-box">
+        <input type="text" id="username" required>
+        <label for="username">Username</label>
+      </div>
+      <div class="input-box">
+        <input type="email" id="email" required>
+        <label for="email">Gmail</label>
+      </div>
+      <div class="input-box">
+        <input type="password" id="password" required>
+        <label for="password">Password</label>
+      </div>
+      <button type="submit" class="btn">Register</button>
+    </form>
   </div>
-
-  <div class="logo">Smart Burme</div>
 
   <div class="menu">
     <i class="fas fa-home"></i>
@@ -103,5 +171,32 @@
     <i class="fas fa-user"></i>
   </div>
 
+  <script>
+    document.getElementById("registrationForm").addEventListener("submit", function(e) {
+      e.preventDefault();
+      const username = document.getElementById("username").value;
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+
+      // Validate email format (simple regex for Gmail)
+      const emailPattern = /^[a-zA-Z0-9._%+-]+@gmail\.com$/;
+      if (!emailPattern.test(email)) {
+        alert("Please enter a valid Gmail address.");
+        return;
+      }
+
+      // Validate password length
+      if (password.length < 6) {
+        alert("Password must be at least 6 characters long.");
+        return;
+      }
+
+      // Registration successful, proceed to Login page after 7 seconds
+      setTimeout(function() {
+        alert("Registration successful! Redirecting to Login page.");
+        window.location.href = "login.html"; // Redirect to the login page after 7 seconds
+      }, 7000);
+    });
+  </script>
 </body>
 </html>
