--- a/index.html
+++ b/index.html
@@ -12,79 +12,90 @@
     }
 
     body {
-      background-color: black;
+      background: linear-gradient(-45deg, #000000, #1a1a1a, #000000, #1a1a1a);
+      background-size: 400% 400%;
+      animation: backgroundAnimation 10s ease infinite;
       color: white;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      overflow: hidden;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
-      font-family: Arial, sans-serif;
-      overflow: hidden;
+      justify-content: center;
+    }
+
+    @keyframes backgroundAnimation {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
     }
 
     #floating-text {
-      font-size: 50px;
+      font-size: 60px;
       font-weight: bold;
-      animation: floating 3s ease-in-out, colorChange 3s ease-in-out infinite;
+      animation: float3D 3s infinite ease-in-out, grayBlueChange 3s infinite ease-in-out;
+      perspective: 800px;
     }
 
-    @keyframes floating {
-      0% { transform: translateY(0); }
-      25% { transform: translateY(-20px); }
-      50% { transform: translateY(0); }
-      75% { transform: translateY(20px); }
-      100% { transform: translateY(0); }
+    @keyframes float3D {
+      0% { transform: rotateX(0deg) translateY(0); }
+      25% { transform: rotateX(15deg) translateY(-10px); }
+      50% { transform: rotateX(0deg) translateY(0); }
+      75% { transform: rotateX(-15deg) translateY(10px); }
+      100% { transform: rotateX(0deg) translateY(0); }
     }
 
-    @keyframes colorChange {
-      0% { color: #ff6f61; }
-      33% { color: #ffcc00; }
-      66% { color: #00b5e2; }
-      100% { color: #ff6f61; }
+    @keyframes grayBlueChange {
+      0% { color: #bbb; }
+      50% { color: #7ec8e3; }
+      100% { color: #bbb; }
     }
 
     .welcome-text {
       display: none;
       font-size: 24px;
-      text-align: center;
       margin-top: 20px;
-      animation: textInOut 2s ease-in-out forwards;
+      animation: fadeText 2s ease-in-out forwards;
     }
 
-    @keyframes textInOut {
+    @keyframes fadeText {
       0% { opacity: 0; transform: translateY(50px); }
-      50% { opacity: 1; transform: translateY(0); }
-      100% { opacity: 1; }
+      100% { opacity: 1; transform: translateY(0); }
     }
 
     #buttons {
-      display: flex;
-      gap: 20px;
-      margin-top: 40px;
       opacity: 0;
-      animation: fadeIn 2s forwards;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      margin-top: 50px;
+      animation: fadeButtons 2s forwards;
       animation-delay: 5s;
+    }
+
+    @keyframes fadeButtons {
+      from { opacity: 0; transform: translateY(20px); }
+      to { opacity: 1; transform: translateY(0); }
     }
 
     .btn {
       text-decoration: none;
-      background: linear-gradient(45deg, #ff6f61, #ffcc00, #00b5e2);
+      text-align: center;
+      background: linear-gradient(90deg, #3a8bdc, #00d4ff, #3a8bdc);
+      background-size: 200% auto;
       color: white;
-      padding: 15px 25px;
+      padding: 15px 30px;
       border-radius: 10px;
-      font-size: 16px;
-      transition: transform 0.3s ease;
-      box-shadow: 0 4px 10px rgba(255, 255, 255, 0.2);
+      font-size: 18px;
+      font-weight: bold;
+      transition: background-position 0.5s ease, transform 0.3s ease;
+      box-shadow: 0 0 15px rgba(0, 204, 255, 0.3);
     }
 
     .btn:hover {
-      transform: scale(1.1);
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(20px); }
-      to { opacity: 1; transform: translateY(0); }
+      background-position: right center;
+      transform: scale(1.05);
     }
   </style>
 </head>
@@ -97,8 +108,8 @@
 
   <div id="buttons">
     <a href="login.html" class="btn">Login</a>
-    <a href="registration.html" class="btn">Sign Up</a>
-    <a href="forget password.html" class="btn">Forgot Password</a>
+    <a href="registration.html" class="btn">Register</a>
+    <a href="forget_password.html" class="btn">Forgot Password</a>
   </div>
 
   <script>
